--- a/app/tests/_log/CreateBroadcastCept.php.page.debug.html
+++ b/app/tests/_log/CreateBroadcastCept.php.page.debug.html
@@ -8,15 +8,15 @@ Broadcasts
     </title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- bootstrap 3.0.2 -->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- font Awesome -->
-    <link href="../../css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <!-- Ionicons -->
-    <link href="../../css/ionicons.min.css" rel="stylesheet" type="text/css" />
+    <link href="/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <!-- DATA TABLES -->
-    <link href="../../css/datatables/dataTables.bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="/css/datatables/dataTables.bootstrap.css" rel="stylesheet" type="text/css" />
     <!-- Theme style -->
-    <link href="../../css/AdminLTE.css" rel="stylesheet" type="text/css" />
+    <link href="/css/AdminLTE.css" rel="stylesheet" type="text/css" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -57,7 +57,7 @@ Broadcasts
                 <li><!-- start message -->
                     <a href="#">
                         <div class="pull-left">
-                            <img src="../../img/avatar3.png" class="img-circle" alt="User Image"/>
+                            <img src="/img/avatar3.png" class="img-circle" alt="User Image"/>
                         </div>
                         <h4>
                             Support Team
@@ -69,7 +69,7 @@ Broadcasts
                 <li>
                     <a href="#">
                         <div class="pull-left">
-                            <img src="../../img/avatar2.png" class="img-circle" alt="user image"/>
+                            <img src="/img/avatar2.png" class="img-circle" alt="user image"/>
                         </div>
                         <h4>
                             AdminLTE Design Team
@@ -81,7 +81,7 @@ Broadcasts
                 <li>
                     <a href="#">
                         <div class="pull-left">
-                            <img src="../../img/avatar.png" class="img-circle" alt="user image"/>
+                            <img src="/img/avatar.png" class="img-circle" alt="user image"/>
                         </div>
                         <h4>
                             Developers
@@ -93,7 +93,7 @@ Broadcasts
                 <li>
                     <a href="#">
                         <div class="pull-left">
-                            <img src="../../img/avatar2.png" class="img-circle" alt="user image"/>
+                            <img src="/img/avatar2.png" class="img-circle" alt="user image"/>
                         </div>
                         <h4>
                             Sales Department
@@ -105,7 +105,7 @@ Broadcasts
                 <li>
                     <a href="#">
                         <div class="pull-left">
-                            <img src="../../img/avatar.png" class="img-circle" alt="user image"/>
+                            <img src="/img/avatar.png" class="img-circle" alt="user image"/>
                         </div>
                         <h4>
                             Reviewers
@@ -240,7 +240,7 @@ Broadcasts
     <ul class="dropdown-menu">
         <!-- User image -->
         <li class="user-header bg-light-blue">
-            <img src="../../img/avatar3.png" class="img-circle" alt="User Image" />
+            <img src="/img/avatar3.png" class="img-circle" alt="User Image" />
             <p>
                 Jane Doe - Web Developer
                 <small>Member since Nov. 2012</small>
@@ -281,7 +281,7 @@ Broadcasts
         <!-- Sidebar user panel -->
         <div class="user-panel">
             <div class="pull-left image">
-                <img src="../../img/avatar3.png" class="img-circle" alt="User Image" />
+                <img src="/img/avatar3.png" class="img-circle" alt="User Image" />
             </div>
             <div class="pull-left info">
                 <p>Hello, </p>
@@ -302,7 +302,7 @@ Broadcasts
         <!-- sidebar menu: : style can be found in sidebar.less -->
         <ul class="sidebar-menu">
             <li>
-                <a href="../../index.html">
+                <a href="/index.html">
                     <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                 </a>
             </li>
@@ -399,59 +399,40 @@ Broadcasts
 
     <!-- Content -->
     
+<form method="POST" action="http://localhost/admin/broadcasts" accept-charset="UTF-8"><input name="_token" type="hidden" value="Ih17vRFEIvlnkkJ70R5GDb3JtAT4uGzQCVhgeQp8">
 <div class="row">
-<div class="col-xs-12">
+    <div class="col-md-12">
+        <!-- general form elements -->
+        <div class="box box-primary">
+            <div class="box-header">
+                <h3 class="box-title">Quick Example</h3>
+            </div><!-- /.box-header -->
+            <!-- form start -->
+            <form role="form">
+                <div class="box-body">
+                    <div class="form-group">
+                        <label for="title">Title</label>                        <input class="form-control" placeholder="Broadcast Title" name="title" type="text" id="title">                    </div>
+                    <div class="form-group">
+                        <label for="game">Game</label>                        <select class="form-control" name="game_id"><option value="1">Counter Strike: Global Offensive</option><option value="2">Starcraft 2</option></select>                    </div>
+                    <div class="form-group">
+                        <label for="start_at">Start Time</label>                        <input class="form-control" name="start_at" type="text" id="start_at">                    </div>
+                    <div class="form-group">
+                        <label for="end_at">End Time</label>                        <input class="form-control" name="end_at" type="text" id="end_at">                    </div>
+                    <div class="form-group">
+                        <label for="description">Description</label>                        <textarea class="form-control" rows="3" name="description" cols="50" id="description"></textarea>                    </div>
+                </div><!-- /.box-body -->
 
-<div class="box">
-<div class="box-header">
-    <h3 class="box-title">All Broadcasts</h3>
-</div><!-- /.box-header -->
-<div class="box-body table-responsive">
-<table id="example1" class="table table-bordered table-striped">
-<thead>
-<tr>
-    <th>Title</th>
-    <th>Game</th>
-    <th>Start</th>
-    <th>End</th>
-    <th>Actions</th>
-</tr>
-</thead>
-<tbody>
+                <div class="box-footer">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+        </div><!-- /.box -->
 
-<tr>
-    <td>EMS One Katowice</td>
-    <td>Starcraft 2</td>
-    <td>[{"id":3,"created_at":"0000-00-00 00:00:00","updated_at":"0000-00-00 00:00:00","deleted_at":null,"broadcast_id":1,"team_a":3,"team_b":1},{"id":4,"created_at":"0000-00-00 00:00:00","updated_at":"0000-00-00 00:00:00","deleted_at":null,"broadcast_id":1,"team_a":2,"team_b":3}] Vs [{"id":3,"created_at":"0000-00-00 00:00:00","updated_at":"0000-00-00 00:00:00","deleted_at":null,"broadcast_id":1,"team_a":3,"team_b":1},{"id":4,"created_at":"0000-00-00 00:00:00","updated_at":"0000-00-00 00:00:00","deleted_at":null,"broadcast_id":1,"team_a":2,"team_b":3}]</td>
-    <td>0000-00-00 00:00:00</td>
-    <td>0000-00-00 00:00:00</td>
-    <td>X</td>
-</tr>
-<tr>
-    <td>EMS One Katowice</td>
-    <td>Counter Strike: Global Offensive</td>
-    <td>[] Vs []</td>
-    <td>0000-00-00 00:00:00</td>
-    <td>0000-00-00 00:00:00</td>
-    <td>X</td>
-</tr>
+    </div>
 
-</tbody>
-<tfoot>
-<tr>
-    <th>Title</th>
-    <th>Game</th>
-    <th>Start</th>
-    <th>End</th>
-    <th>Actions</th>
-</tr>
-</tfoot>
-</table>
-</div><!-- /.box-body -->
-</div><!-- /.box -->
-</div>
 </div>
 
+</form>
 </section><!-- /.content -->
     <!-- ./ content -->
 </section>
@@ -463,12 +444,12 @@ Broadcasts
 <!-- jQuery 2.0.2 -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <!-- Bootstrap -->
-<script src="../../js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js" type="text/javascript"></script>
 <!-- DATA TABES SCRIPT -->
-<script src="../../js/plugins/datatables/jquery.dataTables.js" type="text/javascript"></script>
-<script src="../../js/plugins/datatables/dataTables.bootstrap.js" type="text/javascript"></script>
+<script src="/js/plugins/datatables/jquery.dataTables.js" type="text/javascript"></script>
+<script src="/js/plugins/datatables/dataTables.bootstrap.js" type="text/javascript"></script>
 <!-- AdminLTE App -->
-<script src="../../js/AdminLTE/app.js" type="text/javascript"></script>
+<script src="/js/AdminLTE/app.js" type="text/javascript"></script>
 
 <!-- page script -->
 <script type="text/javascript">
